--- a/jupyterlab/templates/jupyterlab_templates/MagicWords.ipynb
+++ b/jupyterlab/templates/jupyterlab_templates/MagicWords.ipynb
@@ -5,6 +5,10 @@
    "execution_count": null,
    "id": "5b4b2667-19db-498a-9743-0dd44fb8f910",
    "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": ""
+    },
     "tags": []
    },
    "outputs": [],
@@ -12,6 +16,9 @@
     "# Magic Words\n",
     "from __future__ import annotations\n",
     "from typing import Tuple, List, Union, Optional, Callable\n",
+    "\n",
+    "%matplotlib widget\n",
+    "%load_ext wurlitzer\n",
     "\n",
     "import matplotlib as mpl\n",
     "import matplotlib.pyplot as plt\n",
@@ -21,13 +28,9 @@
     "import numpy as np\n",
     "import pandas as pd\n",
     "from IPython.display import display, Markdown\n",
-    "import ipywidgets as widgets\n",
-    "\n",
-    "%matplotlib widget\n",
-    "%load_ext wurlitzer\n",
     "\n",
     "mpl.rcParams[\"font.family\"] = \"Noto Sans JP\"\n",
-    "plt.rcParams[\"figure.max_open_warning\"] = 2000\n",
+    "plt.rcParams[\"figure.max_open_warning\"] = 0\n",
     "sns.set(font=[\"Noto Sans JP\"], font_scale=1.5)\n",
     "pd.set_option(\"display.date_yearfirst\", True)\n",
     "pd.set_option(\"display.float_format\", \"{:.4f}\".format)\n",
@@ -98,10 +101,31 @@
     "            axes = [raw_axes]\n",
     "        else:\n",
     "            axes = raw_axes.ravel().tolist()\n",
-    "        plt.ion()\n",
     "        func(fig, axes, i, **kwargs)\n",
-    "        widgets.AppLayout(center=fig.canvas)\n",
+    "        plt.show(fig.canvas)\n",
     "    return"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "00fbf2b1-9eff-4f35-85ea-4fd82bd7aefc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%html\n",
+    "<!--\n",
+    "set height of code lines narrow\n",
+    "and prevent to show the title of each images\n",
+    "-->\n",
+    "<style>\n",
+    "div.cm-content {\n",
+    "  line-height: 1.05 !important;\n",
+    "}\n",
+    "div.jupyter-widgets.widget-label {\n",
+    "  display: none;\n",
+    "}\n",
+    "</style>"
    ]
   },
   {
@@ -157,7 +181,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plot_it(sample_plot, name=\"sample\", count=3, data=data)"
+    "plot_it(func=sample_plot, count=3, data=data)"
    ]
   }
  ],
