give up to use %matplotlib widget

--- a/jupyterlab/templates/jupyterlab_templates/MagicWords.ipynb
+++ b/jupyterlab/templates/jupyterlab_templates/MagicWords.ipynb
@@ -15,22 +15,17 @@
    "source": [
     "# Magic Words\n",
     "from __future__ import annotations\n",
-    "from typing import Tuple, List, Union, Optional, Callable\n",
+    "from typing import Tuple, List, Dict, Union, Optional  # noqa: F401\n",
     "\n",
-    "%matplotlib widget\n",
-    "%load_ext wurlitzer\n",
-    "\n",
+    "%matplotlib inline\n",
     "import matplotlib as mpl\n",
-    "import matplotlib.pyplot as plt\n",
-    "from matplotlib.figure import Figure\n",
-    "from matplotlib.axes import Axes\n",
+    "import matplotlib.pyplot as plt  # noqa: F401\n",
     "import seaborn as sns\n",
-    "import numpy as np\n",
+    "import numpy as np  # noqa: F401\n",
     "import pandas as pd\n",
     "from IPython.display import display, Markdown\n",
     "\n",
     "mpl.rcParams[\"font.family\"] = \"Noto Sans JP\"\n",
-    "plt.rcParams[\"figure.max_open_warning\"] = 0\n",
     "sns.set(font=[\"Noto Sans JP\"], font_scale=1.5)\n",
     "pd.set_option(\"display.date_yearfirst\", True)\n",
     "pd.set_option(\"display.float_format\", \"{:.4f}\".format)\n",
@@ -51,58 +46,6 @@
     "        display(Markdown(data.to_markdown(floatfmt=f\".{demical}f\", intfmt=\",\")))\n",
     "    else:\n",
     "        display(Markdown(data.strip()))\n",
-    "    return\n",
-    "\n",
-    "\n",
-    "def plot_it(\n",
-    "    func: Callable[[Figure, List[Axes], int, ...], None],\n",
-    "    name: Optional[str] = \"image\",\n",
-    "    count: Optional[int] = 1,\n",
-    "    nrows: Optional[int] = 1,\n",
-    "    ncols: Optional[int] = 1,\n",
-    "    figsize: Optional[Tuple[float, float]] = (6.4, 4.8),\n",
-    "    **kwargs,\n",
-    ") -> None:\n",
-    "    \"\"\"displays Plot anywhere in the notebook.\n",
-    "\n",
-    "    Args:\n",
-    "        func (Callable[[Figure, List[Axes], int, ...], None]):\n",
-    "            The function to add plot and other info to Figure and Axes.\n",
-    "        name (:obj:`str`, optional): basename of the image.\n",
-    "            (default: \"image\")\n",
-    "        count (:obj:`int`, optional): number of creating image using func.\n",
-    "            (default: 1)\n",
-    "        nrows (:obj:`int`, optional): Number of rows of the subplot grid.\n",
-    "            (default: 1)\n",
-    "        ncols (:obj:`int`, optional): Number of columns of the subplot grid.\n",
-    "            (default: 1)\n",
-    "        figsize (:obj:`Tuple[float, float]`, optional): size of figure.\n",
-    "            (default: (6.4, 4.8))\n",
-    "        **kwargs: arguments pass to the func.\n",
-    "    \"\"\"\n",
-    "    if count < 1:\n",
-    "        count = 1\n",
-    "    for i in range(count):\n",
-    "        iname: str\n",
-    "        if count == 1:\n",
-    "            iname = name\n",
-    "        else:\n",
-    "            iname = f\"{name}_{i + 1}\"\n",
-    "        plt.close(iname)\n",
-    "        fig, raw_axes = plt.subplots(\n",
-    "            nrows=nrows,\n",
-    "            ncols=ncols,\n",
-    "            num=iname,\n",
-    "            figsize=figsize,\n",
-    "            layout=\"tight\",\n",
-    "        )\n",
-    "        axes: List[Axes]\n",
-    "        if isinstance(raw_axes, Axes):\n",
-    "            axes = [raw_axes]\n",
-    "        else:\n",
-    "            axes = raw_axes.ravel().tolist()\n",
-    "        func(fig, axes, i, **kwargs)\n",
-    "        plt.show(fig.canvas)\n",
     "    return"
    ]
   },
@@ -114,74 +57,10 @@
    "outputs": [],
    "source": [
     "%%html\n",
-    "<!--\n",
-    "set height of code lines narrow\n",
-    "and prevent to show the title of each images\n",
-    "-->\n",
+    "<!-- set height of code lines narrow -->\n",
     "<style>\n",
-    "div.cm-content {\n",
-    "  line-height: 1.05 !important;\n",
-    "}\n",
-    "div.jupyter-widgets.widget-label {\n",
-    "  display: none;\n",
-    "}\n",
+    "div.cm-content { line-height: 1.05 !important; }\n",
     "</style>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "ac61b81f-9566-4fd9-a06d-f982cbd40b5a",
-   "metadata": {},
-   "source": [
-    "# Sample"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c27e0538-b8f2-4d85-abbf-31a8acd169eb",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def sample_plot(\n",
-    "    fig: Figure,\n",
-    "    axes: List[Axes],\n",
-    "    count: int,\n",
-    "    data: pd.DataFrame,\n",
-    ") -> None:\n",
-    "    ax: Axes = axes[0]\n",
-    "    data.iloc[count * 50 : (count * 50) + 100, :].plot(\n",
-    "        kind=\"line\", x=\"x\", y=\"y\", ax=ax\n",
-    "    )\n",
-    "    fig.suptitle(\"大タイトル\", y=0.9)\n",
-    "    ax.set_title(\"タイトル\")\n",
-    "    ax.set_xlabel(\"X軸\")\n",
-    "    ax.set_ylabel(\"Y軸\")\n",
-    "    # ax.legend().remove()\n",
-    "    ax.legend(bbox_to_anchor=(1.05, 0.95), loc=\"upper left\")\n",
-    "    return"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b0c8ec5a-77d5-46be-b3a9-3a569b47290c",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "x: np.ndarray = np.linspace(0, np.pi * 5, 200)\n",
-    "y: np.ndarray = np.sin(x)\n",
-    "data: pd.DataFrame = pd.DataFrame([{\"x\": t[0], \"y\": t[1]} for t in zip(x, y)])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c1c7d975-e395-4d74-9f24-6b048a1a9a7a",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plot_it(func=sample_plot, count=3, data=data)"
    ]
   }
  ],
