--- a/jupyterlab/templates/jupyterlab_templates/MagicWords.ipynb
+++ b/jupyterlab/templates/jupyterlab_templates/MagicWords.ipynb
@@ -15,14 +15,15 @@
    "source": [
     "# Magic Words\n",
     "from __future__ import annotations\n",
-    "from typing import Tuple, List, Dict, Union, Optional  # noqa: F401\n",
+    "import os\n",
     "\n",
     "%matplotlib inline\n",
     "import matplotlib as mpl\n",
-    "import matplotlib.pyplot as plt  # noqa: F401\n",
+    "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
-    "import numpy as np  # noqa: F401\n",
     "import pandas as pd\n",
+    "from html2image import Html2Image\n",
+    "from PIL import Image\n",
     "from IPython.display import display, Markdown\n",
     "\n",
     "mpl.rcParams[\"font.family\"] = \"Noto Sans JP\"\n",
@@ -33,19 +34,84 @@
     "\n",
     "\n",
     "def show_it(\n",
-    "    data: Union[str, pd.DataFrame],\n",
-    "    demical: Optional[int] = 4,\n",
+    "    data: str | pd.DataFrame,\n",
+    "    demical: int | None = 4,\n",
     ") -> None:\n",
     "    \"\"\"displays Text or Table anywhere in the notebook.\n",
     "\n",
     "    Args:\n",
-    "        data (Union[str, pd.DataFrame]): Text or Table to display.\n",
+    "        data (str | pd.DataFrame): Text or Table to display.\n",
     "        demical (:obj:`int`, optional): Number of digits after decimal point.\n",
     "    \"\"\"\n",
     "    if isinstance(data, pd.DataFrame):\n",
     "        display(Markdown(data.to_markdown(floatfmt=f\".{demical}f\", intfmt=\",\")))\n",
     "    else:\n",
     "        display(Markdown(data.strip()))\n",
+    "    return\n",
+    "\n",
+    "\n",
+    "def show_table(\n",
+    "    df: pd.DataFrame,\n",
+    "    index: bool | None = True,\n",
+    "    font_size: str | None = \"18px\",\n",
+    "    dpi: float | None = 0.8,\n",
+    ") -> None:\n",
+    "    \"\"\"displays Table as an image.\n",
+    "\n",
+    "    Args:\n",
+    "        df (pd.DataFrame): the Table.\n",
+    "        index (:obj:`bool`, optional): print index (default: True)\n",
+    "        font_size (:obj:`str`, optional): font size (default: \"18px\")\n",
+    "        dpi (:obj:`float`, optional): DPI (default: 0.8)\n",
+    "    \"\"\"\n",
+    "    css = f\"\"\"\n",
+    "table.dataframe {{\n",
+    "    border: none;\n",
+    "    border-collapse: collapse;\n",
+    "    border-spacing: 0;\n",
+    "    color: black;\n",
+    "    font-family: Noto Sans JP;\n",
+    "    font-size: {font_size};\n",
+    "    table-layout: fixed;\n",
+    "}}\n",
+    "table.dataframe thead {{\n",
+    "    border-bottom: 1px solid black;\n",
+    "    vertical-align: bottom;\n",
+    "}}\n",
+    "table.dataframe tr, table.dataframe th, table.dataframe td {{\n",
+    "    text-align: right;\n",
+    "    vertical-align: middle;\n",
+    "    padding: 0.5em 0.5em;\n",
+    "    line-height: normal;\n",
+    "    white-space: nowrap;\n",
+    "    max-width: none;\n",
+    "    border: none;\n",
+    "}}\n",
+    "table.dataframe th {{\n",
+    "    font-weight: bold;\n",
+    "}}\n",
+    "table.dataframe tbody tr:nth-child(even) {{\n",
+    "    background: #f5f5f5;\n",
+    "}}\n",
+    "\"\"\"\n",
+    "    path: str = \"_show_table_temp.png\"\n",
+    "    hti: Html2Image = Html2Image(disable_logging=True)\n",
+    "    _ = hti.screenshot(\n",
+    "        html_str=df.to_html(index=index),\n",
+    "        css_str=css,\n",
+    "        save_as=path,\n",
+    "    )\n",
+    "    img: Image = Image.open(path)\n",
+    "    img = img.crop(img.getbbox())\n",
+    "    fig, ax = plt.subplots(\n",
+    "        nrows=1, ncols=1, figsize=img.size, dpi=dpi, layout=\"tight\"\n",
+    "    )\n",
+    "    ax.imshow(img)\n",
+    "    ax.axis(\"off\")\n",
+    "    plt.show()\n",
+    "    plt.clf()\n",
+    "    plt.close()\n",
+    "    os.remove(path)\n",
     "    return"
    ]
   },
