--- a/jupyterlab/templates/jupyterlab_templates/MagicWords.ipynb
+++ b/jupyterlab/templates/jupyterlab_templates/MagicWords.ipynb
@@ -34,24 +34,26 @@
     "\n",
     "\n",
     "def show_it(\n",
-    "    data: str | pd.DataFrame,\n",
+    "    it: str | pd.DataFrame,\n",
+    "    *,\n",
     "    demical: int | None = 4,\n",
     ") -> None:\n",
     "    \"\"\"displays Text or Table anywhere in the notebook.\n",
     "\n",
     "    Args:\n",
-    "        data (str | pd.DataFrame): Text or Table to display.\n",
+    "        it (str | pd.DataFrame): Text or Table to display.\n",
     "        demical (:obj:`int`, optional): Number of digits after decimal point.\n",
     "    \"\"\"\n",
-    "    if isinstance(data, pd.DataFrame):\n",
-    "        display(Markdown(data.to_markdown(floatfmt=f\".{demical}f\", intfmt=\",\")))\n",
+    "    if isinstance(it, pd.DataFrame):\n",
+    "        display(Markdown(it.to_markdown(floatfmt=f\".{demical}f\", intfmt=\",\")))\n",
     "    else:\n",
-    "        display(Markdown(data.strip()))\n",
+    "        display(Markdown(it.strip()))\n",
     "    return\n",
     "\n",
     "\n",
     "def show_table(\n",
-    "    df: pd.DataFrame,\n",
+    "    table: pd.DataFrame,\n",
+    "    *,\n",
     "    index: bool | None = True,\n",
     "    font_size: str | None = \"18px\",\n",
     "    dpi: float | None = 0.8,\n",
@@ -97,7 +99,7 @@
     "    path: str = \"_show_table_temp.png\"\n",
     "    hti: Html2Image = Html2Image(disable_logging=True)\n",
     "    _ = hti.screenshot(\n",
-    "        html_str=df.to_html(index=index),\n",
+    "        html_str=table.to_html(index=index),\n",
     "        css_str=css,\n",
     "        save_as=path,\n",
     "    )\n",
@@ -108,7 +110,7 @@
     "    )\n",
     "    ax.imshow(img)\n",
     "    ax.axis(\"off\")\n",
-    "    plt.show()\n",
+    "    plt.show(fig)\n",
     "    plt.clf()\n",
     "    plt.close()\n",
     "    os.remove(path)\n",
@@ -128,6 +130,14 @@
     "div.cm-content { line-height: 1.05 !important; }\n",
     "</style>"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7ea730ba-0d09-41bc-baef-ff1fce3d9b31",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
